[package]
name = "rust-grid-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2" }
smallvec = "1.13"
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"